# pjlab-cluster-notifier

./: README.md  pyproject.toml
examples/: huggingface_demo.py  training_demo.py
src/pjnotifier/: __init__.py  message.py  notifier.py
src/pjnotifier/channels/: __init__.py  base.py  feishu.py
src/pjnotifier/integrations/: __init__.py  huggingface.py  training.py
