[project]
name = "pjlab-cluster-notifier"
version = "0.1.0"
description = "Lightweight notification toolkit for cluster jobs and training workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Qiang" }]
keywords = ["notification", "feishu", "training", "huggingface", "cluster"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
hf = ["transformers>=4.0"]

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pjnotifier"
source-include = ["examples/**", "tests/**"]
